--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,4 +262,6 @@
     <string name="lang_switch_behavior_switch_schema">Switch rime schema</string>
     <string name="cannot_be_empty">Cannot be empty</string>
     <string name="_cannot_be_empty">%1$s cannot be empty</string>
+    <string name="no_action_available">Not available</string>
+    <string name="action_forget_candidate_word">Forget word</string>
 </resources>
