Tweak/add some missing strings

--- a/app/src/main/cpp/po/fcitx5-android.pot
+++ b/app/src/main/cpp/po/fcitx5-android.pot
@@ -23,6 +23,9 @@ msgstr ""
 msgid "Enable word hint"
 msgstr ""
 
+msgid "Disable word hint based on editor attributes"
+msgstr ""
+
 msgid "Word hint page size"
 msgstr ""
 
