--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name_release">アンドロイド用 Fcitx5</string>
-    <string name="app_name_debug">アンドロイド用 Fcitx5l (デバッグ)</string>
+    <string name="app_name_debug">アンドロイド用 Fcitx5 (デバッグ)</string>
     <string name="save">保存</string>
     <string name="input_methods">インプットメソッド</string>
     <string name="add_input_method">インプットメソッドの追加</string>
@@ -9,12 +9,18 @@
     <string name="conf">設定</string>
     <string name="global_options">全般オプション</string>
     <string name="behavior">ふるまい</string>
+    <string name="advanced">高度な設定</string>
     <string name="ignore_sys_cursor">システムカーソル位置を無視する</string>
     <string name="hide_key_config">ホットキー設定を隠す</string>
     <string name="_not_available_">(利用不可)</string>
+    <string name="button_haptic_feedback">キー押下時の触覚フィードバック</string>
+    <string name="button_vibration_milliseconds">キー押下時の振動の長さ</string>
+    <string name="button_press">押下</string>
+    <string name="button_long_press">長押し</string>
+    <string name="button_vibration_amplitude">キー押下時の振動の大きさ</string>
     <string name="add">追加</string>
     <string name="edit">編集</string>
-    <string name="undo">アンドゥ</string>
+    <string name="undo">取り消す</string>
     <string name="delete_and_sync_data">ランタイムデータを削除して同期する</string>
     <string name="delete_and_sync_data_message">現在のデータディレクトリを削除し、アプリにバンドルされているアセットから同期する</string>
     <string name="enable_ime">インプットメソッドを有効にする</string>
@@ -44,17 +50,19 @@
     <string name="expanded_candidate_style_flexbox">フレックスボックス</string>
     <string name="no_more_input_methods">切り替えるインプットメソッドがもうありません</string>
     <string name="add_more_input_methods">インプットメソッドをさらに追加しますか？</string>
-    <string name="about">About</string>
+    <string name="about">このアプリについて</string>
+    <string name="faq">FAQ</string>
     <string name="current_version">カレントバージョン</string>
     <string name="real_time_logs">リアルタイムログ</string>
     <string name="developer">デベロッパー</string>
     <string name="clear_clb_db">クリップボードデータベースをクリア</string>
-    <string name="pin">Pin</string>
-    <string name="unpin">Unpin</string>
+    <string name="pin">固定する</string>
+    <string name="unpin">固定を解除</string>
     <string name="delete">削除</string>
     <string name="clipboard">クリップボード</string>
-    <string name="keyboard_height">キーボード高さ</string>
+    <string name="keyboard_height">キーボードの高さ</string>
     <string name="keyboard">キーボード</string>
+    <string name="clipboard_suggestion_timeout">クリップボード候補のタイムアウト</string>
     <string name="version">バージョン</string>
     <string name="build_time">ビルド時間</string>
     <string name="build_git_hash">ビルド Git ハッシュ</string>
@@ -76,4 +84,169 @@
     <string name="app_crash">アプリケーションがクラッシュしました</string>
     <string name="app_crash_message">申し訳ありませんが、調査のためにいくつかのログをお届けします。</string>
     <string name="crash_logs">クラッシュログ</string>
+    <string name="verbose_log">詳細な記録</string>
+    <string name="verbose_log_summary">再起動が必要です</string>
+    <string name="removed_x">%1$s を削除しました</string>
+    <string name="added_x">%1$s を追加しました</string>
+    <string name="edited_x">%1$s を編集しました</string>
+    <string name="invalid_value">無効な値</string>
+    <string name="keyboard_long_press_delay">キーの長押しの期間</string>
+    <string name="quickphrase_editor">クイックフレーズエディター</string>
+    <string name="quickphrase_already_exists">クイックフレーズはすでに存在します</string>
+    <string name="invalid_quickphrase">無効な値のクイックフレーズ</string>
+    <string name="create_new">新規作成</string>
+    <string name="name">名前</string>
+    <string name="reset">リセット</string>
+    <string name="quickphrase_keyword">キーワード</string>
+    <string name="quickphrase_phrase">フレーズ</string>
+    <string name="reload_config">設定の再読み込み</string>
+    <string name="input_method_options">インプットメソッドのオプション</string>
+    <string name="theme">テーマ</string>
+    <string name="key_ripple_effect">キーの波紋効果を有効にする</string>
+    <string name="key_border">キーの枠を有効にする</string>
+    <string name="brightness">明るさ</string>
+    <string name="key_radius">キーの角半径</string>
+    <string name="key_horizontal_margin">キーの上下間隔</string>
+    <string name="key_vertical_margin">キーの左右間隔</string>
+    <string name="configure">設定</string>
+    <string name="choose_image">画像を選択</string>
+    <string name="dark_keys">黒字のキー</string>
+    <string name="recrop_image">画像を切り取り直す</string>
+    <string name="navbar_background">ナビゲーションバーの背景</string>
+    <string name="navbar_bkg_none">背景なし</string>
+    <string name="navbar_bkg_color_only">キーボードの色に従う</string>
+    <string name="navbar_bkg_full">キーボードの背景画像</string>
+    <string name="punctuation_position">記号の位置</string>
+    <string name="punctuation_pos_bottom">ボタン（縦置きのみ）</string>
+    <string name="punctuation_pos_top_right">右上</string>
+    <string name="expand_toolbar_by_default">デフォルトでツールバーを展開する</string>
+    <string name="popup_on_key_press">キー押下時にポップアップする</string>
+    <string name="disable_animation">アニメーションを無効にする</string>
+    <string name="import_from_file">ファイルからインポート…</string>
+    <string name="duplicate_builtin_theme">ビルトインテーマを複製…</string>
+    <string name="exception_logcat_created">Logcatプロセスはすでに作成されています</string>
+    <string name="exception_quickphrase_parse">クイックフレーズの行の解析に失敗しました: %1$s</string>
+    <string name="exception_quickphrase_filename">%1$s のファイル拡張子はクイックフレーズを示していません</string>
+    <string name="exception_theme_filename">%1$s のファイル拡張子はテーマを示していません</string>
+    <string name="exception_theme_unknown">テーマ %1$s が不明です</string>
+    <string name="exception_libime_dict_filename">%1$s のファイル拡張子はlibime辞書を示していません</string>
+    <string name="exception_text_dict_filename">%1$s のファイル拡張子はテキスト辞書を示していません</string>
+    <string name="exception_sougou_dict_filename">%1$s のファイル拡張子はsogou辞書を示していません</string>
+    <string name="exception_dict_filename">%1$s のファイル拡張子は辞書を示していません</string>
+    <string name="exception_theme_json">テーマのJSONが見つかりません</string>
+    <string name="exception_theme_name_clash">テーマ名がビルトインテーマと衝突します</string>
+    <string name="exception_theme_src_image">選択した画像をテーマの背景として保存できません</string>
+    <string name="exception_theme_cropped_image">切り取った画像をテーマの背景として保存できません</string>
+    <string name="follow_system_day_night_theme">システムのテーマに従う</string>
+    <string name="follow_system_day_night_theme_summary">選択したテーマに手動で上書きする</string>
+    <string name="light_mode_theme">ライトモードテーマ</string>
+    <string name="dark_mode_theme">ダークモードテーマ</string>
+    <string name="new_theme">新規テーマ</string>
+    <string name="skip">スキップ</string>
+    <string name="horizontal_candidate_growth">残りの幅に合わせるため水平候補を引き伸ばす</string>
+    <string name="none">なし</string>
+    <string name="theme_migrated">テーマは現在のバージョンに以降されました</string>
+    <string name="keep_keyboard_letters_uppercase">キーボードの文字を大文字にする</string>
+    <string name="choose_input_method">インプットメゾッドを選択</string>
+    <string name="edit_clipboard">クリップボードを編集</string>
+    <string name="clipboard_edit_text_hint">クリップボードのコンテンツ</string>
+    <string name="config_addon_not_loaded">利用可能な設定オプションがありません。もしかしたらこのアドオンはfcitxの起動時に無効になっているかもしれません</string>
+    <string name="portrait">縦画面時</string>
+    <string name="landscape">横画面時</string>
+    <string name="keyboard_bottom_padding">キーボードボタンの余白</string>
+    <string name="keyboard_side_padding">キーボード側面の空間</string>
+    <string name="disable_addon_warn_title">アドオンを無効にする</string>
+    <string name="disable_addon_warn_name">%1$s を無効にする場合 :</string>
+    <string name="disable_addon_warn_dep">%1$s を無効にする</string>
+    <string name="disable_addon_warn_optdep">%1$s のいくつかの機能が無効になります</string>
+    <string name="disable_addon_warn_confirm">本当に無効にしますか？</string>
+    <string name="swipe_symbol_behavior">句読点や数字をスワイプして入力する</string>
+    <string name="swipe_down">下にスワイプ</string>
+    <string name="swipe_up">上にスワイプ</string>
+    <string name="disabled">無効</string>
+    <string name="system_default">システムのデフォルト</string>
+    <string name="editor_info_inspector">エディター情報の調査</string>
+    <string name="default_">デフォルト</string>
+    <string name="saving">保存する</string>
+    <string name="delete_all_pinned_items">固定されたすべてのアイテムを削除しますか？</string>
+    <string name="vivo_keypress_workaround">vivo OriginOSにおけるキー押下時の回避策</string>
+    <string name="invalid_im">無効なインプットメゾッド設定ファイル:\n%1$s</string>
+    <string name="invalid_table_dict">無効な辞書:\n%1$s</string>
+    <string name="exception_table_im">Tableインプットメソッドの設定ファイル（.confもしくは.conf.in）が見つかりません</string>
+    <string name="exception_table">Tableの辞書（.dictもしくは.txt）が見つかりません</string>
+    <string name="table_im">Tableインプットメソッド</string>
+    <string name="manage_table_im">Tableインプットメソッドの管理</string>
+    <string name="exception_table_im_filename">\"%1$s\"の拡張子はTableインプットメソッドパッケージのもの（.zip）ではありません</string>
+    <string name="table_already_exists">Tableインプットメソッドの設定ファイル\"%1$s\"は既に存在します</string>
+    <string name="table_file_does_not_exist_title">Tableは利用できません</string>
+    <string name="table_file_does_not_exist_message">Tableの辞書\"%1$s\"が存在しません。辞書ファイルを確認するか、再度インポートしてください。</string>
+    <string name="import_table">Tableにインポート</string>
+    <string name="table_from_zip">Zipファイルから…</string>
+    <string name="table_select_files">分割されたファイルから…</string>
+    <string name="table_file_placeholder">ファイルを選択…</string>
+    <string name="table_conf_select_title">インプットメソッドの設定ファイル（.confもしくは.conf.in）</string>
+    <string name="table_dict_select_title">Tableの辞書（.dictもしくは.txt）</string>
+    <string name="exception_table_conf_filename">\"%1$s\"の拡張子はTableインプットメソッドの設定ファイルのもの（.confもしくは.conf.in）ではありません</string>
+    <string name="exception_table_dict_filename">\"%1$s\"の拡張子はTableインプットメソッドの辞書のもの（.dictもしくは.txt）ではありません</string>
+    <string name="exception_table_import_both_files">インポートする前に上記の両方のファイルを選択してください</string>
+    <string name="notification_permission_message">通知の許可がない場合、時間のかかる操作が行われたときに通知することができません。</string>
+    <string name="notification_permission_title">通知の権限がありません</string>
+    <string name="toolbar_num_row_on_password">パスワード入力時に数字をツールバーに横並びで表示する</string>
+    <string name="space_long_press_behavior">スペースキー長押し時の動作</string>
+    <string name="space_behavior_none">なし</string>
+    <string name="space_behavior_enumerate">インプットメゾッド一覧を表示する</string>
+    <string name="space_behavior_activate">インプットメゾッドのアクティブな状態を切り替える</string>
+    <string name="space_behavior_picker">インプットメゾッド選択ダイアログを表示する</string>
+    <string name="show_lang_switch_key">言語切り替えキーを表示する</string>
+    <string name="horizontal_candidate_style">水平候補スタイル</string>
+    <string name="horizontal_candidate_never_fill">幅を調節しない</string>
+    <string name="horizontal_candidate_auto_fill">幅の調節を強制する</string>
+    <string name="horizontal_candidate_always_fill">常に幅を調節する</string>
+    <string name="inline_suggestions">自動入力候補を表示する</string>
+    <string name="delete_all_except_pinned">固定されていないすべてのアイテムを削除しますか？</string>
+    <string name="num_items_deleted">%1$d 個のアイテムを削除しました</string>
+    <string name="delete_theme">テーマを削除</string>
+    <string name="delete_theme_msg">本当に\"%1$d\"テーマを削除しますか？</string>
+    <string name="capture_heap_dump">ヒープダンプを取得する</string>
+    <string name="plugins">プラグイン</string>
+    <string name="plugins_loaded">読み込みました</string>
+    <string name="plugins_failed">読み込みに失敗しました</string>
+    <string name="missing_plugin_descriptor">プラグインの記述語がありません</string>
+    <string name="invalid_plugin_descriptor">プラグインの記述語が無効です</string>
+    <string name="missing_data_descriptor">データの記述語がありません</string>
+    <string name="invalid_data_descriptor">データの記述語が無効です</string>
+    <string name="incompatible_api">互換性のないAPI: %1$s</string>
+    <string name="path_conflict">パス\"%1$s\"はすでに %2$s に使用されています</string>
+    <string name="main_program">メインプログラム</string>
+    <string name="edit_theme">テーマを編集</string>
+    <string name="show_voice_input_button">音声入力ボタンを表示する</string>
+    <string name="fcitx_daemon">Fcitxデーモン</string>
+    <string name="restarting_fcitx">Fcitxを再起動中</string>
+    <string name="plugin_needs_reload">プラグインの変更を除去しました。ここをクリックして再読み込みします</string>
+    <string name="no_plugins">利用可能なプラグインはありません</string>
+    <string name="removed_n_items">%1$s 個のアイテムを削除しました</string>
+    <string name="whether_reset_switch_preference">この設定をデフォルトの設定にリセットしますか？</string>
+    <string name="enabled">有効</string>
+    <string name="following_system_settings">システム設定に従う</string>
+    <string name="button_sound">キー押下時の音</string>
+    <string name="button_sound_volume">キーの音量</string>
+    <string name="theme_message_follow_system_day_night_mode_enabled">「システムのダークモードに従う」設定が有効な場合、テーマを手動で切り替えることができません</string>
+    <string name="disable_it">無効にする</string>
+    <string name="export_user_data">ユーザーデータをエクスポートする</string>
+    <string name="import_user_data">ユーザーデータをインポートする</string>
+    <string name="exception_user_data_filename">%1$s のファイル拡張子はfcitx5-androidのユーザーデータを示していません</string>
+    <string name="exception_user_data_metadata">ユーザーデータのメタデータが見つかりません</string>
+    <string name="exception_user_data_package_name_mismatch">ユーザーデータが現在のアプリに適合しません</string>
+    <string name="user_data_imported">%1$s のユーザーデータをインポートしました。再起動します…</string>
+    <string name="restart_channel">アプリの再起動</string>
+    <string name="restart_notify_msg">アプリが再起動されました。ここをクリックして開きます</string>
+    <string name="i_do_not_need_it">今はしない</string>
+    <string name="grant_permission">権限の許可</string>
+    <string name="expand_keypress_area">キー押下範囲を端まで拡張する</string>
+    <string name="update_table">Tableの更新</string>
+    <string name="table_dict_replace_message">Tableの辞書\"%1$s\"は存在します。新しい辞書をインポートして置き換えることができます。</string>
+    <string name="lang_switch_key_behavior">言語切り替えキーの動作</string>
+    <string name="lang_switch_behavior_next_ime_app">次のインプットメゾッドアプリに切り替える</string>
+    <string name="cannot_be_empty">空にできません</string>
+    <string name="_cannot_be_empty">%1$s を空にできません</string>
     </resources>
