--- a/lib/plugin-base/src/main/res/values-ru/strings.xml
+++ b/lib/plugin-base/src/main/res/values-ru/strings.xml
@@ -7,4 +7,5 @@
     <string name="copied">Скопировано в буфер обмена</string>
     <string name="plugin_info">Информация о плагине</string>
     <string name="licenses">Лицензии с открытым исходным кодом</string>
+    <string name="has_service">Содержит службу IPC</string>
 </resources>
