--- a/app/src/main/cpp/po/ja.po
+++ b/app/src/main/cpp/po/ja.po
@@ -1,6 +1,7 @@
 # 
 # Translators:
 # Takuro Onoue <kusanaginoturugi@gmail.com>, 2022
+# NPL, 2024
 # 
 msgid ""
 msgstr ""
@@ -8,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/fcitx5-android/fcitx5-android/issues\n"
 "POT-Creation-Date: 2022-02-14 18:51+0800\n"
 "PO-Revision-Date: 2022-03-18 22:18+0000\n"
-"Last-Translator: Takuro Onoue <kusanaginoturugi@gmail.com>, 2022\n"
-"Language-Team: Japanese (https://www.transifex.com/fcitx/teams/12005/ja/)\n"
+"Last-Translator: NPL, 2024\n"
+"Language-Team: Japanese (https://app.transifex.com/fcitx/teams/12005/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,3 +22,27 @@ msgstr "Android フロントエンド"
 
 msgid "Android Keyboard"
 msgstr "Android キーボード"
+
+msgid "Word hint"
+msgstr "単語ヒント"
+
+msgid "Enable word hint"
+msgstr "単語ヒントを有効にする"
+
+msgid "Disable word hint based on editor attributes"
+msgstr ""
+
+msgid "Word hint page size"
+msgstr "単語ヒントのページサイズ"
+
+msgid "Choose key modifier"
+msgstr "修飾キーを選択"
+
+msgid "Insert space between words"
+msgstr "単語間に空白を入力する"
+
+msgid "Android Toast & Notification"
+msgstr "Android トーストと通知"
+
+msgid "Hidden Notifications"
+msgstr "通知を非表示にする"
