--- a/app/src/main/cpp/po/ru.po
+++ b/app/src/main/cpp/po/ru.po
@@ -1,7 +1,7 @@
 # 
 # Translators:
 # Potato Hatsue, 2022
-# Dmitry <dmitrydmitry761@gmail.com>, 2022
+# Dmitry <dmitrydmitry761@gmail.com>, 2024
 # 
 msgid ""
 msgstr ""
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/fcitx5-android/fcitx5-android/issues\n"
 "POT-Creation-Date: 2022-02-14 18:51+0800\n"
 "PO-Revision-Date: 2022-03-18 22:18+0000\n"
-"Last-Translator: Dmitry <dmitrydmitry761@gmail.com>, 2022\n"
-"Language-Team: Russian (https://www.transifex.com/fcitx/teams/12005/ru/)\n"
+"Last-Translator: Dmitry <dmitrydmitry761@gmail.com>, 2024\n"
+"Language-Team: Russian (https://app.transifex.com/fcitx/teams/12005/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,6 +29,9 @@ msgstr "Подсказка слова"
 msgid "Enable word hint"
 msgstr "Включить подсказку слова"
 
+msgid "Disable word hint based on editor attributes"
+msgstr "Отключить подсказки слов в зависимости от свойств редактора"
+
 msgid "Word hint page size"
 msgstr "Размер страницы подсказки слов"
 
@@ -37,3 +40,9 @@ msgstr "Выберите клавишу-модификатор"
 
 msgid "Insert space between words"
 msgstr "Вставить пробел между словами"
+
+msgid "Android Toast & Notification"
+msgstr "Всплывающие подсказки и уведомления Android"
+
+msgid "Hidden Notifications"
+msgstr "Скрытые уведомления"
