--- a/app/src/main/cpp/po/zh_CN.po
+++ b/app/src/main/cpp/po/zh_CN.po
@@ -1,7 +1,7 @@
 # 
 # Translators:
 # Potato Hatsue, 2022
-# rocka, 2022
+# rocka, 2024
 # 
 msgid ""
 msgstr ""
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/fcitx5-android/fcitx5-android/issues\n"
 "POT-Creation-Date: 2022-02-14 18:51+0800\n"
 "PO-Revision-Date: 2022-03-18 22:18+0000\n"
-"Last-Translator: rocka, 2022\n"
-"Language-Team: Chinese (China) (https://www.transifex.com/fcitx/teams/12005/zh_CN/)\n"
+"Last-Translator: rocka, 2024\n"
+"Language-Team: Chinese (China) (https://app.transifex.com/fcitx/teams/12005/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,6 +29,9 @@ msgstr "单词提示"
 msgid "Enable word hint"
 msgstr "启用单词提示"
 
+msgid "Disable word hint based on editor attributes"
+msgstr "根据编辑器属性禁用单词提示"
+
 msgid "Word hint page size"
 msgstr "单词提示页大小"
 
@@ -38,8 +41,8 @@ msgstr "选词修饰键"
 msgid "Insert space between words"
 msgstr "在单词间插入空格"
 
-msgid "Android 消息框与通知"
-msgstr ""
+msgid "Android Toast & Notification"
+msgstr "Android 弹出提示与通知"
 
-msgid "隐藏的通知"
-msgstr ""
+msgid "Hidden Notifications"
+msgstr "隐藏的通知"
