Change app name and sync translation
- zh: remove suffix "5"
- non-zh: remove suffix "for Android"

# Conflicts:
#	app/src/main/res/values-zh-rCN/strings.xml
#	app/src/main/res/values-zh-rTW/strings.xml

--- a/app/src/main/cpp/po/ru.po
+++ b/app/src/main/cpp/po/ru.po
@@ -29,6 +29,9 @@ msgstr "Подсказка слова"
 msgid "Enable word hint"
 msgstr "Включить подсказку слова"
 
+msgid "Enable word hint when using physical keyboard"
+msgstr "Включить подсказки слов при использовании физической клавиатуры"
+
 msgid "Disable word hint based on editor attributes"
 msgstr "Отключить подсказки слов в зависимости от свойств редактора"
 
