--- a/app/src/main/cpp/po/ja.po
+++ b/app/src/main/cpp/po/ja.po
@@ -29,6 +29,9 @@ msgstr "単語ヒント"
 msgid "Enable word hint"
 msgstr "単語ヒントを有効にする"
 
+msgid "Enable word hint when using physical keyboard"
+msgstr ""
+
 msgid "Disable word hint based on editor attributes"
 msgstr ""
 
