--- a/app/src/main/cpp/po/zh_CN.po
+++ b/app/src/main/cpp/po/zh_CN.po
@@ -2,6 +2,7 @@
 # Translators:
 # Potato Hatsue, 2022
 # rocka, 2024
+# Yiyu Liu, 2024
 # 
 msgid ""
 msgstr ""
@@ -9,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/fcitx5-android/fcitx5-android/issues\n"
 "POT-Creation-Date: 2022-02-14 18:51+0800\n"
 "PO-Revision-Date: 2022-03-18 22:18+0000\n"
-"Last-Translator: rocka, 2024\n"
+"Last-Translator: Yiyu Liu, 2024\n"
 "Language-Team: Chinese (China) (https://app.transifex.com/fcitx/teams/12005/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,6 +29,9 @@ msgstr "单词提示"
 
 msgid "Enable word hint"
 msgstr "启用单词提示"
+
+msgid "Enable word hint when using physical keyboard"
+msgstr "在使用物理键盘时启用单词提示"
 
 msgid "Disable word hint based on editor attributes"
 msgstr "根据编辑器属性禁用单词提示"
