--- a/plugin/anthy/src/main/res/values-ru/strings.xml
+++ b/plugin/anthy/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name_debug">Fcitx5 для Android (плагин Anthy | Отладка)</string>
-    <string name="app_name_release">Fcitx5 для Android (плагин Anthy)</string>
+    <string name="app_name_debug">Fcitx5 (плагин Anthy | Отладка)</string>
+    <string name="app_name_release">Fcitx5 (плагин Anthy)</string>
     <string name="description">Поддержка движка Anthy (японский метод ввода) для Fcitx5</string>
 </resources>
