--- a/plugin/unikey/src/main/res/values/strings.xml
+++ b/plugin/unikey/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name_debug">Fcitx5 for Android (Unikey Plugin | Debug)</string>
-    <string name="app_name_release">Fcitx5 for Android (Unikey Plugin)</string>
+    <string name="app_name_debug">Fcitx5 (Unikey Plugin | Debug)</string>
+    <string name="app_name_release">Fcitx5 (Unikey Plugin)</string>
     <string name="description">Unikey (Vietnamese input method) engine support for Fcitx5</string>
 </resources>
