--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,4 +289,5 @@
     <string name="restart_fcitx_instance_confirm">Fcitx instance will be destroyed and reinitialized. Proceed?</string>
     <string name="ignore_system_window_insets">Ignore system WindowInsets</string>
     <string name="more_vibration">More vibration</string>
+    <string name="browse_user_data_dir">Browse user data directory</string>
 </resources>
